readme file added, input validation added, and module name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "number-geez-module",
+  "name": "number-geez",
   "version": "1.0.0",
   "description": "This module converts Arabic to Ethiopian number(geez) ",
   "main": "index.js",
